test/measureReversePhase3.slq
// args: --run

def main(){
	def f(const x:ğ”¹){
		assert(false); // error
		return ();
	}
	x:=H(0:ğ”¹);
	k:=reverse(phase);
	reverse(phase)(Ï€/2):=f(x);
	phase(-Ï€/2);
	return x;
}
